@@ -2,6 +2,13 @@ CHANGELOG
 =========
 
 
+2021-11-15
+----------
+### Changelog extractor
+* Ignore files with dashes in the file name.
+* Handle and ignore empty files.
+
+
 2021-09-26
 ----------
 ### Changelog extractor
